syntax = "proto3";
package supergloo.solo.io;
option go_package = "github.com/solo-io/supergloo/pkg/api/v1";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/ref.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";

message Install {

    option (core.solo.io.resource).short_name = "i";
    option (core.solo.io.resource).plural_name = "installs";

    // Status indicates the validation status of this resource.
    // Status is read-only by clients, and set by supergloo during validation
    core.solo.io.Status status = 100 [(gogoproto.nullable) = false, (gogoproto.moretags) = "testdiff:\"ignore\""];

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 101 [(gogoproto.nullable) = false];

    message Istio {

        // which namespace to install to
        string installation_namespace = 1;

        // which version of the istio helm chart to install
        // ignored if using custom helm chart
        string istio_version = 2;

        // enable auto injection of pods
        bool enable_auto_inject = 3;

        // enable mutual tls between pods
        bool enable_mtls = 4;

        // optional. set to use a custom root ca
        // to issue certificates for mtls
        // ignored if mtls is disabled
        core.solo.io.ResourceRef custom_root_cert = 9;

        // install grafana with istio
        bool install_grafana = 6;

        // install prometheus with istio
        bool install_prometheus = 7;

        // install jaeger with istio
        bool install_jaeger = 8;

    }

    // note: currently unimplemented
    message Custom {
        // supergloo will attempt to
        // install this helm chart.
        // format should be a URI accessible to supergloo
        string custom_helm_chart = 9;

        // optional. if specified,
        // these values will be used
        // when rendering the helm chart
        string custom_helm_values = 10;

    }

    // disables this install
    // setting this to true will cause supergloo to
    // not to install this mesh, or uninstall an active install
    bool disabled = 1;

    oneof install_type {
        // install
        Istio istio = 2;

        // install a custom helm chart
        // an associated mesh object
        // will not be created by supergloo
        // create the mesh object manually
        // in a future release, supergloo
        // will feature discovery
        // which can discover mesh objects
        // automatically
        Custom custom = 3;
    }

    // gzipped inline string containing the applied manifest
    // read-only, set by the server after successful installation.
    // TODO (ilackarms): make sure this is not too large for etcd (value size limit 1.5mb)
    string installed_manifest = 5;

    // reference to the Mesh crd that was created from this install
    // read-only, set by the server after successful installation.
    core.solo.io.ResourceRef installed_mesh = 6;
}